# Your-First-Python-Package-on-PyPI

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py
assets/: Readme.py  exampleCommandLine.txt
src/: MainModule.py  __init__.py  cmdlogtime.py
tests/: test_code.py
